--- a/biz-finance/src/main/resources/application.yml
+++ b/biz-finance/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   #    enabled: true
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/business_analysis?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+    url: jdbc:mysql://127.0.0.1:3306/fm_data?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
     username: root
     password: 888888
     type: com.alibaba.druid.pool.DruidDataSource
